--- a/app/src/main/res/layout/item_in_list.xml
+++ b/app/src/main/res/layout/item_in_list.xml
@@ -56,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
+            android:textSize="20sp"
             android:layout_marginTop="19dp"
             android:textColor="#C9C9C9"
             android:focusable="true"
