--- a/app/src/main/res/layout/item_in_list.xml
+++ b/app/src/main/res/layout/item_in_list.xml
@@ -50,17 +50,36 @@
 
         </FrameLayout>
 
-        <TextView
-            android:id="@+id/item_list_title"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
-            android:textSize="20sp"
-            android:layout_marginTop="19dp"
-            android:textColor="#C9C9C9"
-            android:focusable="true"
-            android:text="TextView" />
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:id="@+id/item_list_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:focusable="true"
+                android:textStyle="bold"
+                android:text="Название" />
+
+            <TextView
+                android:id="@+id/item_list_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textSize="16sp"
+                android:textColor="#A9A9A9"
+                android:text="Категория"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
