--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -26,88 +26,127 @@
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/image_item"
                     android:layout_width="match_parent"
-                    android:layout_height="450dp"
+                    android:layout_height="530dp"
                     android:scaleType="centerCrop"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/adventure_time"
                     app:shapeAppearanceOverlay="@style/RoundedBottomCorners"
                     app:layout_constraintBaseline_toTopOf="parent"
                     app:layout_constraintEnd_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintEnd_toEndOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/title_item"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="22dp"
-                android:layout_marginTop="18dp"
-                android:textSize="29sp"
-                android:text="Время приключений: Фиона и Кейк" />
-
             <LinearLayout
-                android:id="@+id/container_orTitile_age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
+                android:orientation="vertical"
+                android:background="@drawable/gradient_background"
+                android:layout_marginTop="-25dp"
+                android:translationZ="-1dp">
 
                 <TextView
-                    android:id="@+id/or_title_item"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginStart="22dp"
-                    android:layout_marginEnd="5dp"
+                    android:id="@+id/title_item"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
-                    android:gravity="center_vertical"
-                    android:text="Adventure Time: Fionna and Cake" />
-
-                <TextView
-                    android:id="@+id/age_rating"
-                    android:layout_width="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="62dp"
-                    android:background="@drawable/rounded_rating_background"
-                    android:gravity="center_vertical"
-                    android:paddingHorizontal="8dp"
-                    android:paddingVertical="3dp"
-                    android:text="16+"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:layout_marginHorizontal="22dp"
+                    android:layout_marginTop="40dp"
+                    android:textSize="29sp"
+                    android:text="Время приключений: Фиона и Кейк" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginHorizontal="22dp"
+                    android:gravity="start">
+
+                    <TextView
+                        android:id="@+id/or_title_item"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:gravity="center_vertical"
+                        android:text="Adventure Time: Fionna and Cake" />
+
+                    <TextView
+                        android:id="@+id/age_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:background="@drawable/rounded_rating_background"
+                        android:gravity="center"
+                        android:paddingHorizontal="7dp"
+                        android:paddingVertical="2dp"
+                        android:text="16+"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginHorizontal="22dp">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="16dp"
+                        android:paddingVertical="8dp"
+                        android:text="@string/add_button"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:background="@drawable/rounded_button_background" />
+
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:layout_width="76dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/rounded_button_background"
+                        android:padding="10dp"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_del"
+                        android:contentDescription="@string/delete_button_description"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginTop="17dp"
+                android:orientation="vertical"
+                android:layout_marginTop="16dp"
                 android:layout_marginHorizontal="22dp">
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/release_date"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="16dp"
-                    android:paddingVertical="8dp"
-                    android:text="@string/add_button"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:background="@drawable/rounded_button_background" />
+                    android:text="Дата выпуска: 2023 г."
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:layout_width="72dp"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/rounded_button_background"
-                    android:padding="10dp"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/ic_del"
-                    android:contentDescription="@string/delete_button_description"/>
+                <TextView
+                    android:id="@+id/category"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Категория: мультфильм"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/genre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Жанр: мультфильм, фантастика, фэнтези, приключения"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
             </LinearLayout>
 
             <TextView
@@ -117,6 +156,7 @@
                 android:layout_marginHorizontal="22dp"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
+                android:textColor="@color/white"
                 android:maxLines="8"
                 android:ellipsize="end"
                 android:text="TextView"/>
