--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -17,7 +17,8 @@
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="96dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -159,7 +160,7 @@
                 android:textColor="@color/white"
                 android:maxLines="8"
                 android:ellipsize="end"
-                android:text="TextView"/>
+                android:text="Описание"/>
 
             <TextView
                 android:id="@+id/show_more_text"
@@ -172,6 +173,33 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:text="Подробнее..."/>
+
+            <TextView
+                android:id="@+id/watch_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="22dp"
+                android:text="Смотреть:"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:visibility="gone"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/watch_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginHorizontal="22dp"
+                android:paddingVertical="8dp"
+                android:text="Открыть в Кинопоиске"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:background="@drawable/rounded_button_background"
+                android:drawableStart="@drawable/ic_play"
+                android:drawablePadding="5dp"
+                android:paddingStart="90dp"
+                android:paddingEnd="90dp"/>
 
         </LinearLayout>
 
