Реализована разметка модального окна + исправлена error_image

--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -97,6 +97,7 @@
                     android:layout_marginHorizontal="22dp">
 
                     <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/addButton"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
