--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="gray555">#555555</color>
     <color name="gray333">#333333</color>
     <color name="gray111">#111111</color>
+    <color name="gray151515">#151515</color>
     <color name="white_gray">#D0D0D0</color>
 </resources>
