--- a/app/src/main/res/layout/fragment_add_to_group.xml
+++ b/app/src/main/res/layout/fragment_add_to_group.xml
@@ -95,7 +95,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/button_cancel"
+        android:id="@+id/buttonCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Отмена"
