--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -1,112 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray111"
     android:padding="22dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingBottom="16dp">
+            android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/back_button"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:background="@null"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_arrow_back"
-                android:tint="@color/white" />
-
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Фильтры"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingBottom="16dp">
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/back_button"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="@null"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_arrow_back"
+                    android:tint="@color/white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Фильтры"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:layout_marginStart="10dp"/>
+            </LinearLayout>
+
+            <com.skydoves.powerspinner.PowerSpinnerView
+                android:id="@+id/spinner_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/spinner_background"
                 android:textColor="@color/white"
-                android:textSize="24sp"
-                android:layout_marginStart="10dp"/>
-        </LinearLayout>
+                android:textSize="18sp"
+                android:text="Тест"
+                android:padding="10dp"
+                android:layout_marginVertical="20dp"
+                app:spinner_arrow_gravity="end"
+                app:spinner_arrow_tint="@color/white" />
 
-
-        <com.skydoves.powerspinner.PowerSpinnerView
-            android:id="@+id/spinner_category"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            app:spinner_arrow_gravity="end"
-            app:spinner_arrow_tint="@color/white" />
-
-        <com.skydoves.powerspinner.PowerSpinnerView
-            android:id="@+id/spinner_genre"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            app:spinner_arrow_gravity="end"
-            app:spinner_arrow_tint="@color/white" />
-
-        <com.skydoves.powerspinner.PowerSpinnerView
-            android:id="@+id/spinner_year"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            app:spinner_arrow_gravity="end"
-            app:spinner_arrow_tint="@color/white"
-            />
-
-        <com.skydoves.powerspinner.PowerSpinnerView
-            android:id="@+id/spinner_age"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            app:spinner_arrow_gravity="end"
-            app:spinner_arrow_tint="@color/white"
-            />
-
-        <com.skydoves.powerspinner.PowerSpinnerView
-            android:id="@+id/spinner_status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            app:spinner_arrow_gravity="end"
-            app:spinner_arrow_tint="@color/white"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginTop="24dp">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/apply_button"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+            <com.skydoves.powerspinner.PowerSpinnerView
+                android:id="@+id/spinner_genre"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Принять"
-                android:backgroundTint="@color/white"
-                android:background="@drawable/rounded_button_background"
-                android:textColor="@color/black"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginTop="12dp"
+                android:background="@drawable/spinner_background"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:text="Тест"
+                android:padding="10dp"
+                android:layout_marginBottom="20dp"
+                app:spinner_arrow_gravity="end"
+                app:spinner_arrow_tint="@color/white" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/cancel_button"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+            <com.skydoves.powerspinner.PowerSpinnerView
+                android:id="@+id/spinner_year"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Отмена"
-                android:backgroundTint="@color/gray333"
-                android:background="@drawable/rounded_button_cansel_border"
-                android:textColor="@color/white"/>
+                android:layout_marginTop="12dp"
+                android:background="@drawable/spinner_background"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:text="Тест"
+                android:padding="10dp"
+                android:layout_marginBottom="20dp"
+                app:spinner_arrow_gravity="end"
+                app:spinner_arrow_tint="@color/white" />
+
+            <com.skydoves.powerspinner.PowerSpinnerView
+                android:id="@+id/spinner_age"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/spinner_background"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:text="Тест"
+                android:padding="10dp"
+                android:layout_marginBottom="20dp"
+                app:spinner_arrow_gravity="end"
+                app:spinner_arrow_tint="@color/white" />
+
+            <com.skydoves.powerspinner.PowerSpinnerView
+                android:id="@+id/spinner_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/spinner_background"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:text="Тест"
+                android:padding="10dp"
+                android:layout_marginBottom="20dp"
+                app:spinner_arrow_gravity="end"
+                app:spinner_arrow_tint="@color/white" />
         </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <LinearLayout
+        android:id="@+id/button_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="72dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/apply_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Принять"
+            android:background="@drawable/rounded_button_background"
+            android:textColor="@color/black"
+            android:layout_marginEnd="8dp"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/cancel_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="Отмена"
+            android:background="@drawable/rounded_button_cansel_border"
+            android:textColor="@color/white"/>
     </LinearLayout>
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
