--- a/app/src/main/res/drawable/ic_filter.xml
+++ b/app/src/main/res/drawable/ic_filter.xml
@@ -1,15 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="512dp"
     android:height="512dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="512.05"
+    android:viewportHeight="512.05">
   <path
-      android:fillColor="@color/white"
-      android:pathData="M1,4.75H3.736a3.728,3.728 0,0 0,7.195 0H23a1,1 0,0 0,0 -2H10.931a3.728,3.728 0,0 0,-7.195 0H1a1,1 0,0 0,0 2ZM7.333,2a1.75,1.75 0,1 1,-1.75 1.75A1.752,1.752 0,0 1,7.333 2Z"/>
+      android:fillColor="#FF000000"
+      android:pathData="M21.36,101.36h58.37c11.52,42.39 55.22,67.41 97.61,55.89c27.22,-7.4 48.49,-28.67 55.89,-55.89h257.47c11.78,0 21.33,-9.55 21.33,-21.33s-9.55,-21.33 -21.33,-21.33H233.22C221.7,16.31 178,-8.72 135.62,2.8c-27.22,7.4 -48.49,28.67 -55.89,55.89H21.36c-11.78,0 -21.33,9.55 -21.33,21.33S9.58,101.36 21.36,101.36z"/>
   <path
-      android:fillColor="@color/white"
-      android:pathData="M23,11L20.264,11a3.727,3.727 0,0 0,-7.194 0L1,11a1,1 0,0 0,0 2L13.07,13a3.727,3.727 0,0 0,7.194 0L23,13a1,1 0,0 0,0 -2ZM16.667,13.75A1.75,1.75 0,1 1,18.417 12,1.752 1.752,0 0,1 16.667,13.75Z"/>
+      android:fillColor="#FF000000"
+      android:pathData="M490.69,234.69h-58.37c-11.5,-42.38 -55.17,-67.42 -97.55,-55.92c-27.25,7.39 -48.53,28.67 -55.92,55.92H21.36c-11.78,0 -21.33,9.55 -21.33,21.33c0,11.78 9.55,21.33 21.33,21.33h257.49c11.5,42.38 55.17,67.42 97.55,55.92c27.25,-7.39 48.53,-28.67 55.92,-55.92h58.37c11.78,0 21.33,-9.55 21.33,-21.33C512.03,244.24 502.47,234.69 490.69,234.69z"/>
   <path
-      android:fillColor="@color/white"
-      android:pathData="M23,19.25H10.931a3.728,3.728 0,0 0,-7.195 0H1a1,1 0,0 0,0 2H3.736a3.728,3.728 0,0 0,7.195 0H23a1,1 0,0 0,0 -2ZM7.333,22a1.75,1.75 0,1 1,1.75 -1.75A1.753,1.753 0,0 1,7.333 22Z"/>
+      android:fillColor="#FF000000"
+      android:pathData="M490.69,410.69H233.22c-11.52,-42.39 -55.22,-67.41 -97.61,-55.89c-27.22,7.4 -48.49,28.67 -55.89,55.89H21.36c-11.78,0 -21.33,9.55 -21.33,21.33c0,11.78 9.55,21.33 21.33,21.33h58.37c11.52,42.39 55.22,67.41 97.61,55.89c27.22,-7.4 48.49,-28.67 55.89,-55.89h257.47c11.78,0 21.33,-9.55 21.33,-21.33C512.03,420.24 502.47,410.69 490.69,410.69z"/>
 </vector>
