Сделан поиск + разметка на fragment_profile

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,8 +31,8 @@
         tools:layout="@layout/fragment_item" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.moonrise.ui.notifications.NotificationsFragment"
+        android:id="@+id/navigation_profile"
+        android:name="com.example.moonrise.ui.profile.ProfileFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_profile" />
 </navigation>
