--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,18 +24,9 @@
         app:itemRippleColor="@null"
         app:labelVisibilityMode="unlabeled">
 
-        <View
-            android:id="@+id/indicator"
-            android:layout_width="48dp"
-            android:layout_height="2dp"
-            android:background="@color/main_purple"
-            android:layout_marginBottom="5dp"
-            app:layout_constraintBottom_toTopOf="@id/nav_view"
-            app:layout_constraintStart_toStartOf="parent"/>
-
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment_activity_main"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
