--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="gray111">#111111</color>
     <color name="gray151515">#151515</color>
     <color name="white_gray">#D0D0D0</color>
+    <color name="white_gray2">#C9C9C9</color>
+    <color name="white_gray3">#929292</color>
 </resources>
