Добален поиск в профиле

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,7 @@
     tools:context=".ui.profile.ProfileFragment">
 
     <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_in_list"
+        android:id="@+id/searchProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_search_view"
