--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,13 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.search.SearchFragment">
+    android:background="@color/gray111"
+    tools:context=".ui.search.SearchFragment"
+    android:fillViewport="true">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingStart="23dp"
+        android:paddingEnd="23dp"
+        android:paddingTop="25dp"
+        android:paddingBottom="16dp">
 
-</FrameLayout>
+        <!-- Верхняя панель поиска -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_in_list"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_search_view"
+                android:padding="10dp"
+                app:queryHint="Поиск по названию"
+                app:iconifiedByDefault="false"
+                android:inputType="text"
+                app:searchIcon="@drawable/customicon" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/voice_button"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="15dp"
+                android:background="@null"
+                android:scaleType="centerInside"
+                android:layout_gravity="center_vertical"
+                android:tint="@color/white"
+                android:src="@drawable/ic_microphon" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/filter_button"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="15dp"
+                android:background="@null"
+                android:scaleType="centerInside"
+                android:layout_gravity="center_vertical"
+                android:tint="@color/white"
+                android:src="@drawable/ic_filter" />
+        </LinearLayout>
+
+        <!-- История поиска -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_history_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            tools:listitem="@layout/item_search_history" />
+
+        <!-- Блок франшизы -->
+        <LinearLayout
+            android:id="@+id/franchise_block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp">
+<!--            android:visibility="gone"-->
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Франшиза"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp" />
+
+            <ImageView
+                android:id="@+id/franchise_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"/>
+<!--                android:background="@drawable/rounded_background"-->
+
+            <TextView
+                android:id="@+id/franchise_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="6 релизов во франшизе"
+                android:textColor="@color/white"
+                android:layout_marginTop="8dp"
+                android:layout_gravity="center_horizontal" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/franchise_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Перейти"
+                android:background="@drawable/rounded_button_background"
+                android:textColor="@color/black"
+                android:layout_marginTop="10dp"
+                android:paddingHorizontal="40dp"
+                android:layout_gravity="center_horizontal" />
+        </LinearLayout>
+
+        <!-- Блок результатов поиска -->
+        <LinearLayout
+            android:id="@+id/search_results_block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp">
+<!--            android:visibility="gone"-->
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Результаты поиска"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/search_result_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_in_list"
+                android:clipToPadding="false"
+                android:overScrollMode="never" />
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
