--- a/app/src/main/res/layout/item_search_history.xml
+++ b/app/src/main/res/layout/item_search_history.xml
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="Токийский гуль"
+        android:text="Текст"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:maxLines="1"
