Реализована история поиска

--- a/app/src/main/res/layout/item_search_history.xml
+++ b/app/src/main/res/layout/item_search_history.xml
@@ -37,5 +37,6 @@
         android:scaleType="centerInside"
         android:src="@drawable/ic_clear"
         android:tint="@color/white"
-        android:padding="4dp" />
+        android:padding="4dp"
+        android:background="@null" />
 </LinearLayout>
