--- a/app/src/main/res/layout/fragment_add_rating.xml
+++ b/app/src/main/res/layout/fragment_add_rating.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@color/gray111"
     android:orientation="vertical"
-    android:padding="24dp">
+    android:padding="22dp">
 
     <TextView
         android:id="@+id/title"
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Неважно"
-        android:textColor="@color/white"
+        android:textColor="@color/gray_for_cancel"
         android:background="@drawable/rounded_button_cansel_border"
         android:layout_marginTop="20dp" />
 
