--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -180,7 +181,7 @@
             android:layout_height="wrap_content"
             android:text="Сбросить"
             android:background="@drawable/rounded_button_cansel_border"
-            android:textColor="@color/white"/>
+            android:textColor="@color/gray_for_cancel"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/apply_button"
