--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="25dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="22dp">
+        android:layout_marginHorizontal="22dp">
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_in_list"
