Фрагмент с франшизой запускается и отображает описание и элементы не включая с которого перешли

--- a/app/src/main/res/layout/dialog_filter_genres.xml
+++ b/app/src/main/res/layout/dialog_filter_genres.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="22dp"
+    android:paddingHorizontal="22dp"
+    android:paddingVertical="25dp"
     android:background="@color/gray111">
 
     <TextView
