--- a/app/src/main/res/layout/dialog_filter_year.xml
+++ b/app/src/main/res/layout/dialog_filter_year.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/gray111"
-    android:padding="22dp"
+    android:paddingHorizontal="22dp"
+    android:paddingVertical="25dp"
     android:gravity="center">
 
     <TextView
