--- a/app/src/main/res/layout/fragment_add_rating.xml
+++ b/app/src/main/res/layout/fragment_add_rating.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:background="@color/gray111"
     android:orientation="vertical"
-    android:padding="22dp">
+    android:paddingHorizontal="22dp"
+    android:paddingVertical="25dp">
 
     <TextView
         android:id="@+id/title"
