--- a/app/src/main/res/layout/fragment_add_to_group.xml
+++ b/app/src/main/res/layout/fragment_add_to_group.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="22dp"
-    android:background="@color/gray333">
+    android:paddingHorizontal="22dp"
+    android:paddingVertical="25dp"
+    android:background="@color/gray222">
 
     <TextView
         android:layout_width="wrap_content"
