--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray111"
-    android:padding="22dp">
+    android:paddingHorizontal="22dp"
+    android:paddingVertical="25dp">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
@@ -31,8 +32,8 @@
 
                 <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/back_button"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
                     android:background="@null"
                     android:scaleType="centerInside"
                     android:src="@drawable/ic_arrow_back"
