--- a/app/src/main/res/layout/fragment_franchise.xml
+++ b/app/src/main/res/layout/fragment_franchise.xml
@@ -13,14 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="22dp"
+        android:layout_marginHorizontal="22dp"
+        android:layout_marginVertical="25dp"
         android:gravity="center_vertical"
         android:background="@color/gray111">
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/back_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/ic_arrow_back"
@@ -41,8 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:paddingHorizontal="22dp"
-        android:paddingBottom="12dp"
+        android:layout_marginHorizontal="22dp"
+        android:padding="10dp"
         android:textSize="16sp"
         tools:text="Список всех частей франшизы: 3 сезона, 2 фильма." />
 
@@ -51,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="8dp"
+        android:layout_marginTop="15dp"
         tools:listitem="@layout/item_in_list" />
 
 </LinearLayout>
