--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,8 +20,7 @@
         android:inputType="text"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="25dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="22dp"
+        android:layout_marginHorizontal="22dp"
         app:searchIcon="@drawable/customicon"/>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -29,9 +28,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
+        android:layout_marginTop="15dp"
+        android:paddingHorizontal="16dp"
         android:scrollbars="none"
         />
 
