--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,10 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingStart="22dp"
-        android:paddingEnd="22dp"
+        android:paddingHorizontal="22dp"
         android:paddingTop="25dp"
-        android:paddingBottom="16dp">
+        android:paddingBottom="15dp">
 
         <!-- Верхняя панель поиска -->
         <LinearLayout
@@ -77,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="25dp"
             android:visibility="gone">
 
 
