До исправления всех багов 1

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="gray_for_cancel">#D0D0D0</color>
     <color name="white_gray2">#C9C9C9</color>
     <color name="white_gray3">#929292</color>
+    <color name="_1a1a1a">#1A1A1A</color>
 </resources>
