--- a/app/src/main/res/layout/item_in_list.xml
+++ b/app/src/main/res/layout/item_in_list.xml
@@ -81,16 +81,41 @@
                 android:textStyle="bold"
                 android:text="Название" />
 
-            <TextView
-                android:id="@+id/item_list_category"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="16sp"
-                android:textColor="@color/gray_for_cancel"
-                android:text="Категория"
-                android:maxLines="1"
-                android:ellipsize="end"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/item_list_category"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/gray_for_cancel"
+                    android:paddingVertical="4dp"
+                    android:paddingHorizontal="10dp"
+                    android:background="@drawable/rounded_dark_background"
+                    android:text="Категория"
+                    android:maxLines="1"
+                    android:ellipsize="end"/>
+
+                <TextView
+                    android:id="@+id/item_list_releaseDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="10dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/gray_for_cancel"
+                    android:paddingVertical="4dp"
+                    android:paddingHorizontal="10dp"
+                    android:background="@drawable/rounded_dark_background"
+                    android:text="2023 г."
+                    android:maxLines="1"
+                    android:ellipsize="end"/>
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
